@startuml RateMyClassmateER
title Rate My Classmate 平台 ER 图

entity User {
  *user_id : UUID
  ---
  account : string
  password : string
  role : enum
  created_at : datetime
}

entity Student {
  *student_id : UUID
  ---
  school_id : UUID
  name : string
  grade : int
  created_at : datetime
}

entity School {
  *school_id : UUID
  ---
  school_name : string
  created_at : datetime
}

entity Rating {
  *rating_id : UUID
  ---
  rater_id : UUID
  target_id : UUID
  score : int
  comment : text
  created_at : datetime
}

entity RatingSummary {
  *target_id : UUID
  ---
  avg_score : float
  rating_count : int
  last_update : datetime
}

entity Badge {
  *badge_id : UUID
  ---
  name : string
  description : string
  badge_type : enum
  rule_desc : text
}

entity StudentBadge {
  *student_badge_id : UUID
  ---
  student_id : UUID
  badge_id : UUID
  period : string
  awarded_at : datetime
}

entity SchoolBadge {
  *school_badge_id : UUID
  ---
  school_id : UUID
  badge_id : UUID
  period : string
  awarded_at : datetime
}

entity Leaderboard {
  *leaderboard_id : UUID
  ---
  name : string
  type : string
  formula : text
}

entity LeaderboardEntry {
  *entry_id : UUID
  ---
  leaderboard_id : UUID
  student_id : UUID
  rank : int
  score : decimal
}

entity SchoolApplication {
  *application_id : UUID
  ---
  applicant_id : UUID
  school_name : string
  contact : string
  reason : text
  status : enum
  created_at : datetime
  updated_at : datetime
}

entity StudentApplication {
  *application_id : UUID
  ---
  applicant_id : UUID
  student_name : string
  school_id : UUID
  grade : int
  reason : text
  status : enum
  created_at : datetime
  updated_at : datetime
}

School ||--o{ Student
User ||--o{ Rating : rater
Student ||--o{ Rating : target
Student ||--|| RatingSummary
Student ||--o{ StudentBadge
Badge ||--o{ StudentBadge
School ||--o{ SchoolBadge
Badge ||--o{ SchoolBadge
Leaderboard ||--o{ LeaderboardEntry
Student ||--o{ LeaderboardEntry
User ||--o{ SchoolApplication
User ||--o{ StudentApplication

@enduml

